Delete the tooling surface nothing reads, so a value written and never read stops looking load-bearing
face-model-redux phase 12i - the dead-surface band of the census remainder (TK-3, TK-4, TE-A4,
TE-B9, TE-B11, TBE-5, TBE-6, TBE-12). Every row re-verified at HEAD before it was touched; several
had moved since the census was written.

WHAT GOES, AND WHY EACH IS DEAD RATHER THAN MERELY UNCALLED.

BlockRegistryIndex kept a whole second LinkedHashMap keyed by block id - built, populated and
threaded through three constructions - whose only reader was an accessor with no callers. That is
the one deletion here that frees per-session memory rather than lines. LayerDefinitionIndex.entries()
and ClassNodeCache.size() are plain zero-reader accessors, and entries() was the sole user of its
file's java.util.Collections import.

AsmKit.scanPendingBindings and its StaticBinding record go with their unit test: the helper was
written for "the nine-plus LDC-to-PUTSTATIC scanner clones" and no clone ever adopted it, because
its strict reset breaks on the wrapping INVOKESTATIC. Two javadocs downstream cited it to explain
why they hand-roll the walk instead; those parentheticals go too, leaving the fact they sat on.

EntitySubject carried typeField and mobCategory with no reader, and deleting them made MobRegistration
pointless in turn - it existed only to pair an id with the category, so it collapses to the String the
map always wanted. Following the value one level down is the difference between deleting a component
and moving a dead value somewhere quieter. BlockEntitySubject.beTypeField is the same shape on the
block side, and the discovery join key survives as the local it always was.

TK-3's fourth item is STRUCK rather than landed: ToolingSession.options() has zero callers as the
census says, but it is an implicit record accessor over a component read to stamp source_version into
all ten shipped headers. There is nothing to delete without unmaking the record.

TBE-12 is broade